# kadai

./: 1_3.go  1_3.go.html  1_4.go  1_4.go.html  kadai1_1.go  kadai1_2  kadai1_2.go  main.go
first/: 1_4.go.html
first/locust/: locust.go
first/report/: first.aux
first/res/: 0.5.csv  c_0.5.csv  c_0.7.csv  consideration.tex  kadai1_2.ipynb  kadai1_3.ipynb
first/res/.ipynb_checkpoints/: kadai1_2-checkpoint.ipynb
fourth/: article.aux  article.dvi  article.fdb_latexmk  fourth.cabal
fourth/app/: Main.hs
fourth/haskell/: LICENSE  fourth.cabal
fourth/haskell/app/: OneJacobi.hs  OnePower.hs  Three.hs  ThreeSimpsons.hs  ThreeTrapezoidal.hs  Two.hs  TwoExtra.hs
fourth/jupyter/: Untitled.ipynb  kadai4.ipynb  three_simpsons.csv  two.csv
fourth/jupyter/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  kadai4-checkpoint.ipynb
fourth/output/: 1_1.txt  1_2.txt  2.csv  2_extra.csv  3_simpsons.csv  3_trapezoidal.csv
fourth/tex/: article.tex
locust/: locust.go  locust.go.html
matmul/: matmul.go  matmul.go.html
report/: first.aux  first.dvi  first.tex
res/: 0.05.csv  0.15.csv  c_0.45.csv  kadai1_2.ipynb  kadai1_3.ipynb
res/.ipynb_checkpoints/: kadai1_2-checkpoint.ipynb  kadai1_3-checkpoint.ipynb
second/: 1.go  2.go  4.go  5.go  6.go  6_1.go  6_2.go  8.go  8_2.go  backward.go  commands.sh  forward.go  inverse.go  lu.go  print.go  solve.go
second/backward/: backward.go
second/forward/: forward.go
second/lu/: lu.go
second/report/: main.aux  main.dvi  main.fdb_latexmk  main.fls  main.tex
third/: .gitignore  README.md  common.rb  install.md  main.rb  plot.rb  vector.rb
third/graphs/euler/: error_by_p.eps  error_by_time.eps  rc_ra.eps
third/graphs/heun/: error_by_p.eps  error_by_time.eps  rc_ra.eps
third/graphs/runge_kutta/: error_by_p.eps  error_by_time.eps
third/prototype/: prototype.ipynb
third/src/: Gemfile  calculation.rb  least_square.rb  main.rb  plot.rb  vector.rb
third/teishutu/: output.txt
third/tex/: article.aux  article.dvi  article.fdb_latexmk  article.tex  graphs
(+27 files in other folders)
