name:                fourth
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/fourth#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Seq, Func, Types, Three
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable one-power
  hs-source-dirs:      app
  main-is:             OnePower.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fourth
                     , hmatrix
  default-language:    Haskell2010

executable one-jacobi
  hs-source-dirs:      app
  main-is:             OneJacobi.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fourth
                     , hmatrix
  default-language:    Haskell2010

executable two
  hs-source-dirs:      app
  main-is:             Two.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fourth
  default-language:    Haskell2010

executable three-trapezoidal
  hs-source-dirs:      app
  main-is:             ThreeTrapezoidal.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fourth
  default-language:    Haskell2010

executable three-simpsons
  hs-source-dirs:      app
  main-is:             ThreeSimpsons.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fourth
  default-language:    Haskell2010
